--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./css/experiencia.css">
   <link rel="stylesheet" href="./css/formacao.css">
   <link rel="stylesheet" href="./css/footer.css">
-
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
@@ -130,7 +130,7 @@
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa</p>
       <ul class="footer-contato">
         <li>+55 11 99999-9999</li>
-        <li>vinicius@hotmail.com</li>
+        <li>meuemail@email.com</li>
         <li><a href="/">Linkedin</a></li>
       </ul>
       <p class="footer-copyright">Lobo. Alguns direitos reservados</p>
