--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <h2 class="subtitulo">Formação</h2>
       <div>
         <p class="formacao-texto">
-          Minha mais recente experiência academica foi o <strong>Mestrado</strong> que diz no exterior em <strong>UX Design</strong>. Além disso sempre me mantenho atualizado com cursos intensivos online.
+          Minha mais recente experiência academica foi minha graduação de <strong>Técnologo</strong>. Além disso sempre me mantenho atualizado com cursos intensivos online para aprimorar meus conhecimentos.
         </p>
         <ul class="faculdade-lista">
           <li class="faculdade">
@@ -98,23 +98,15 @@
             <h3 class="faculdade-curso">Análise e desenvolvimento de Sistemas</h3>
             <span class="faculdade-instituicao">UNIP</span>
           </li>
-          <li class="faculdade">
-            <span class="faculdade-tipo">Tecnólogo</span>
-            <h3 class="faculdade-curso">Análise e desenvolvimento de Sistemas</h3>
-            <span class="faculdade-instituicao">UNIP</span>
-          </li>
-          <li class="faculdade">
-            <span class="faculdade-tipo">Tecnólogo</span>
-            <h3 class="faculdade-curso">Análise e desenvolvimento de Sistemas</h3>
-            <span class="faculdade-instituicao">UNIP</span>
-          </li>
+
+
         </ul>
 
         <div class="formacao-extra">
           <div class="cursos">
             <h3>Cursos intensivos</h3>
             <ul>
-              <li>UX Design & UI Design <span>17h</span></li>
+              <li>UX Design & UI Design para iniciantes<span>17h</span></li>
               <li>Front End para Iniciantes <span>72h</span></li>
             </ul>
           </div>
@@ -123,7 +115,6 @@
             <h3>Idiomas</h3>
             <ul>
               <li>Ingles <span>/ Avançado</span></li>
-              <li>Japonês <span>/ Iniciante</span></li>
             </ul>
           </div>
         </div>
@@ -134,8 +125,7 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa</p>
       <ul class="footer-contato">
-        <li>+55 11 99999-9999</li>
-        <li>meuemail@email.com</li>
+        <li>viniciushajime@hotmail.com</li>
         <li><a href="/">Linkedin</a></li>
       </ul>
       <p class="footer-copyright">Lobo. Alguns direitos reservados</p>
