--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. 
 
 
       <div class="empresa">
-        <span class="empresa-ano">2045</span>
+        <span class="empresa-ano">2025</span>
         <h3 class="empresa-titulo">Bikcraft</h3>
         <span class="empresa-titulo">Desenvolvedor Júnior</span>
         <p class="empresa-texto">No projeto Bikcraft, eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
