Alteração de texto

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
   <main class="introducao">
     <img src="./img/perfil.jpg" alt="Foto de perfil" width="360" height="520">
     <div>
-      <h1>Desenvolvedor <br>Front End &<br>UX/UI Designer</h1>
-      <p>Localizado em Atibaia</p>
+      <h1>Desenvolvedor <br>Front End
+        <p>Localizado em Atibaia</p>
     </div>
   </main>
 
   <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. 
+      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.
 
 
       <div class="empresa">
